# invader

./: .gitignore  .project  CMakeLists.txt  HISTORY.md  README.md  build_gcc.sh  build_msvc.cmd
assets/graphics/: BIGFNT.RAW  BLOCS1.RAW  Enemic.RAW  FONTMT.RAW  MEDFNT.RAW  NAU00.RAW  NAUINT.RAW  NAUMARE0.RAW  Options.raw  PALETA1.PAL  PANELL.RAW  SPACE0.RAW  SPRITES1.RAW  TERRA.RAW  TERRA0.RAW  TERRA1.RAW  TERRAD0.RAW  TITUL.RAW
src/: ALL_LIB.H  CMakeLists.txt  CREDITS.CC  Colision.cxx  Colision.h  Collider.cpp  Collider.h  Color.h  Conjunt.cxx  Conjunt.h  EFFECTS.CC  Effects.cxx  Effects.h  Enemics.cxx  Enemics.h  Entity.cpp  Entity.h  EntityAnimation.cpp  EntityAnimation.h  EntityAnimationOptions.h  EntityManager.cpp  EntityManager.h  EntityManagerLoadOptions.h  EntityTypeConfiguration.h  Font.cpp  Font.cxx  Font.h  Frame.h  Grafics.cxx  Grafics.h  Graphics.cpp  Graphics.h  INTRO.CPP  INTRO.H  Image.cpp  Image.h  ImageLoadOptions.h  Init.cc  Input.cpp  Input.h  (+71 more)
src/core/: core.h
src/core/animation/: @animation.cpp  @animation.h  Action.cpp  Action.h  Animation.cpp  Animation.h  ChannelsInfo.cpp  ChannelsInfo.h  Ease.cpp  Ease.h  KeyframePoint.cpp  KeyframePoint.h  KeyframeTrack.cpp  KeyframeTrack.h  KeyframeTrackGroup.cpp  KeyframeTrackGroup.h  Tween.cpp  Tween.h  TweenChannel.h
src/core/base/: @base.cpp  @base.h  Bit.h  ColorTerm.cpp  ColorTerm.h  Common.h  Exception.cpp  Exception.h  Log.cpp  Log.h  Path.cpp  Path.h  String.cpp  String.h  Vector2.h
src/core/entity/: @entity.cpp  @entity.h  Entity.cpp  Entity.h  EntityAnimation.cpp  EntityAnimation.h  EntityFrameAnimation.h  EntityManager.cpp  EntityManager.h  EntityTypeConfiguration.h  Frame.h  Sprite.cpp
src/core/graphics/: @graphics.cpp  @graphics.h  Color4f.cpp  Color4f.h  Font.cpp  FontDrawOptions.h  FontLoadOptions.h  Graphics.cpp  Graphics.h  Image.cpp  Image.h  ImageDrawOptions.h  Material.cpp  Material.h  MaterialAnimation.cpp  MaterialAnimation.h  SDL_utils.cpp  SDL_utils.h  Transform.cpp  Transform.h  TransformAnimation.cpp  TransformAnimation.h
src/core/input/: @input.cpp  @input.h  Input.cpp  Input.h
src/core/physics/: @physics.cpp  @physics.h  Collider.cpp
src/core/sound/: @sound.cpp  @sound.h  Sound.cpp  SoundPlayer.h
src/core/tilemap/: @tilemap.cpp  @tilemap.h  Tilemap.cpp  Tilemap.h  TilemapGridFormat.h
src/old/: CONST.H  Conjunt.cxx  Enemics.h  INTRO.H  Moviment.cxx  Paleta.h  Resources.cxx  Stage1.cc  Stage1.cpp  Struct.cc  UTIL.CXX  UTIL.H  Vscreen.h  _Invader.h  _main.cpp
